--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Index{% endblock %}
-{% block head %}
-   {{ super() }}
-   <style>
-       body{
-           font-size: 50px;
-           background-color: aquamarine;
-       }
-   </style>
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %}Flask{% endblock %}
+{% block page_content %}
+    <div class = "page-header">
+    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    </div>
+   {{ wtf.quick_form(form) }}
 {% endblock %}
-{% block body%}
-   hello,world!
-{% endblock %} 
