--- a/templates/user.html
+++ b/templates/user.html
@@ -1,15 +1,7 @@
-<html>
-  <head>
-      <title>123</title>
-  </head>
-  <body> 
-      {% macro render_comment(comment) %} 
-         <li>{{ comment }}</li> 
-      {% endmacro %} 
-      <ul> 
-          {% for comment in comments.values() %} 
-              {{ render_comment(comment) }} 
-          {% endfor %} 
-      </ul>
-  </body>  
-</html>
+{% extends "base.html" %}
+{% block title %} Flasky {% endblock %}
+{% block page_content %}
+    <div class="page-header">
+        <h1>Hello,{{ name }}!</h1>
+    </div>
+{% endblock %}
