--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,13 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Flask{% endblock %}
 {% block page_content %}
-    <div class = "page-header">
+   <div class = "page-header">
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
-    </div>
+    {% if not known %}
+    <p>Please to meet you!</p>
+    {% else %}
+    <p>Happy to see you again!</p>
+    {% endif %}
+   </div>
    {{ wtf.quick_form(form) }}
 {% endblock %}
