--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,3 +37,7 @@
   {% block page_content %}{% endblock %} 
 </div> 
 {% endblock %}
+{% block scripts %} 
+{{ super() }} 
+{{ moment.include_moment() }} 
+{% endblock %}
