--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,8 @@
 {% block title %}Flask{% endblock %}
 {% block page_content %}
    <div class = "page-header">
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}.</p> 
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
     <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
     {% if not known %}
     <p>Please to meet you!</p>
